Istio-Practical/deployment-v1.yaml
# 1. Apache Deployment (v1)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-v1
  namespace: dhruv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
