Istio-Practical/deployment-v2.yaml
# 2. Nginx Deployment (v2)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  namespace: dhruv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
